--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Bruno Mariano <bsignx@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "git-commit-msg-linter": "^2.4.4"
+    "@types/node": "^14.0.14",
+    "git-commit-msg-linter": "^2.4.4",
+    "typescript": "^3.9.6"
   }
 }
