--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
-  "extends": "standard-with-typescript",
+  "extends": [
+    "standard-with-typescript",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+    "plugins": [
+    "prettier"
+  ],
   "rules": {
     "@typescript-eslint/consistent-type-definitions:": "off",
-    "@typescript-eslint/strict-boolean-expressions": "off"
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/camelcase": "off"
+    
   }
 }
