--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,27 @@
-{  "compilerOptions": {
-    "target": "es5",
+{
+  "compilerOptions": {
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "rootDir": "src",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "src/main/test/cypress"
   ]
 }
