--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.1",
-    "typescript": "^3.9.6"
-  },
-  "dependencies": {
+    "typescript": "^3.9.6",
     "@types/faker": "^4.1.12",
     "faker": "^4.1.0"
   }
