--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test:ci": "yarn test -- --coverage"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
@@ -22,14 +24,16 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.1",
-    "typescript": "^3.9.6",
-    "@types/faker": "^4.1.12",
-    "faker": "^4.1.0"
+    "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "axios": "^0.19.2"
   }
 }
