--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
@@ -34,6 +36,8 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
