--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,29 @@
 {
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+
   "extends": [
     "standard-with-typescript",
     "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:react/recommended"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
     "plugins": [
-    "prettier"
+    "prettier",
+    "react"
   ],
   "rules": {
     "@typescript-eslint/consistent-type-definitions:": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/consistent-type-definitions": "off"
-    
+    "@typescript-eslint/consistent-type-definitions": "off",
+    "react/jsx-uses-react": "error",
+    "react/jsx-uses-vars": "error"
   }
 }
