--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Bruno Mariano <bsignx@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "start": "webpack-dev-server --open",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "yarn test -- --watch",
     "test:staged": "yarn test -- --findRelatedTests",
     "test:ci": "yarn test -- --coverage"
@@ -18,6 +19,7 @@
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard-with-typescript": "11",
@@ -25,14 +27,20 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^4.1.0",
     "git-commit-msg-linter": "^2.4.4",
     "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
+    "node-sass": "^4.14.1",
     "prettier": "^2.0.5",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "ts-jest": "^26.1.1",
+    "ts-loader": "^8.0.0",
     "typescript": "^3.9.6",
     "web-dev-server": "^3.0.22",
     "webpack": "^4.43.0",
