--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard-with-typescript": "11",
@@ -42,9 +43,9 @@
     "ts-jest": "^26.1.1",
     "ts-loader": "^8.0.0",
     "typescript": "^3.9.6",
-    "web-dev-server": "^3.0.22",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "axios": "^0.19.2",
